# arcanum

./: .gitignore  CLAUDE.md  FEATURE_INNOVATIONS.md  README.md  STORY_DASHBOARD_SUMMARY.md  STORY_TAROT_INTEGRATION.md  TECHNICAL_ANALYSIS.md  build_stories.py  enhanced_tarot_scraper.py  package-lock.json  pyproject.toml
backend/: main.py
backend/config/: clients_config.json  evaluation_rubric.json  practice_scenarios.json  practice_system_schema.json  spreads-config.json  tester-layout.json
backend/services/: card_data_loader.py  card_meaning_extractor.py  context_string_builder.py  mlx_model_service.py  position_meaning_matcher.py  practice_service.py  prompt_engineer.py  question_classifier.py  question_context_retriever.py  reading_generator.py  sample_reading_generator.py  spread_config_loader.py
docs/: INK_TAG_SYSTEM_GUIDE.md  migration-strategy.md  twine-migration-plan.md
docs/planning/: planning_taps.md  testing.md
frontend/: ARCHITECTURE.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  App_old.tsx
ink/: README.md  main.ink  nyx.ink  sarah.ink  sarah.json  test_client.ink
ink/testing/: position_constraint_test.ink
llm/: mistral_test.py  mlx_tarot_test.py  qwen_test.py  system_prompt.md
llm/tuning_data/: tarot_readings_huggingface.csv
scripts/: EXAMPLES.md  README.md  build-twine.sh  build_twine.py  twine-config.json
tests/: test_deck.py
twine-poc/: README.md  arcanum-stylesheet.twee  enhanced-tarot-story.twee  simple-sugarcube-test.twee  tarot-story.twee
(+304 files in other folders)
