[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arcanum"
version = "0.1.0"
description = "A tarot reading library"

dependencies = ["fastapi", "uvicorn", "pydantic"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[project.scripts]
arcanum = "arcanum.cli:main"
